<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.artillexstudios</groupId>
    <artifactId>AxAFKZone</artifactId>
    <version>1.11.0</version>
    <packaging>jar</packaging>

    <name>AxAFKZone</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>dev.dejvokep.boostedyaml</pattern>
                                    <shadedPattern>com.artillexstudios.axafkzone.libs.boostedyaml</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.artillexstudios.axapi</pattern>
                                    <shadedPattern>com.artillexstudios.axafkzone.libs.axapi</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>com.artillexstudios.axafkzone.libs.bstats</shadedPattern>
                                </relocation>
<!--                                <relocation>-->
<!--                                    <pattern>dev.triumphteam.gui</pattern>-->
<!--                                    <shadedPattern>com.artillexstudios.axafkzone.libs.gui</shadedPattern>-->
<!--                                </relocation>-->
                                <relocation>
                                    <pattern>revxrsal.commands</pattern>
                                    <shadedPattern>com.artillexstudios.axafkzone.libs.lamp</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.commons.math3</pattern>
                                    <shadedPattern>com.artillexstudios.axafkzone.libs.axapi.libs.math3</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>Artillex-Studios</id>
            <url>https://repo.artillex-studios.com/releases/</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios.axapi</groupId>
            <artifactId>axapi</artifactId>
            <version>2.1.0-DEV-31</version>
            <scope>compile</scope>
            <classifier>all</classifier>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.26.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.12.2</version>
            <scope>provided</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>dev.triumphteam</groupId>-->
<!--            <artifactId>triumph-gui</artifactId>-->
<!--            <version>3.1.13</version>-->
<!--            <scope>compile</scope>-->
<!--            <exclusions>-->
<!--                <exclusion>-->
<!--                    <artifactId>*</artifactId>-->
<!--                    <groupId>*</groupId>-->
<!--                </exclusion>-->
<!--            </exclusions>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.2.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>